Really fixed list spacing this time!

--- a/css/venmo.css
+++ b/css/venmo.css
@@ -73,7 +73,7 @@ a:hover {
   }
 
   .post ul, .post ol {
-    margin: 20px 0;
+    margin-bottom: 20px;
   }
 
 h2 {
